Add tx priority select

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -141,5 +141,13 @@
   "sendSelectFromAddressBook": "Select from Address Book",
   "sendSelectedContact": "Selected contact",
   "sendClearSelectedContact": "Clear selected contact",
-  "sendEditAddress": "Edit Address"
+  "sendEditAddress": "Edit Address",
+  "sendPriorityLow": "Low",
+  "sendPriorityNormal": "Normal",
+  "sendPriorityHigh": "High",
+  "sendPriorityLabel": "priority",
+  "sendTransactionPriority": "Transaction Priority",
+  "sendFeeLabel": "Fee",
+  "sendBalanceLabel": "Balance",
+  "sendFailedToGetFeesError": "Failed to get fees."
 }
