--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -60,11 +60,11 @@
   "homeTransactionConfirmed": "Confirmed",
   "homeNoTransactions": "No transactions",
   "receiveTitle": "Receive",
-  "receivePrimaryAddressWarn": "Warning: For better privacy, consider using subaddresses if supported by your light wallet server.",
-  "receiveSubaddressWarn": "Warning: Make sure your light wallet server supports subaddresses, otherwise, you will not be able to see incoming transactions.",
+  "receivePrimaryAddressWarn": "Warning: Unless you know what you're doing, please consider using subaddresses for better privacy.",
   "receiveShareButton": "Share",
   "receiveShowSubaddressButton": "Show Subaddress",
   "receiveShowPrimaryAddressButton": "Show Primary Address",
+  "receiveServerNoSubaddressesWarn": "Warning: This server does not support subaddresses. For better privacy, consider using a server that supports them. You are receiving to your primary address.",
   "sendTitle": "Send",
   "sendSendButton": "Send",
   "sendTransactionSuccessfullySent": "Transaction successfully sent!",
