--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -60,11 +60,11 @@
   "homeTransactionConfirmed": "Confirmado",
   "homeNoTransactions": "Sem transações",
   "receiveTitle": "Receber",
-  "receivePrimaryAddressWarn": "Aviso: Para maior privacidade, considere usar subendereços se o seu servidor de light wallet os suportar.",
-  "receiveSubaddressWarn": "Aviso: Certifique-se de que seu servidor de light wallet suporta subendereços, caso contrário, você não conseguirá ver as transações recebidas.",
+  "receivePrimaryAddressWarn": "Aviso: A menos que saiba o que está fazendo, por favor considere usar subendereços para melhor privacidade.",
   "receiveShareButton": "Compartilhar",
   "receiveShowSubaddressButton": "Mostrar Subendereço",
   "receiveShowPrimaryAddressButton": "Mostrar Endereço Primário",
+  "receiveServerNoSubaddressesWarn": "Aviso: Este servidor não suporta subendereços. Para melhor privacidade, considere usar um servidor que os suporte. Você está recebendo no seu endereço primário.",
   "sendTitle": "Enviar",
   "sendSendButton": "Enviar",
   "sendTransactionSuccessfullySent": "Transação enviada com sucesso!",
