Make layouts adapt to larger screens

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2,12 +2,15 @@
   "@@locale": "en",
   "continueText": "Continue",
   "cancel": "Cancel",
+  "close": "Close",
   "unknownError": "Unknown error.",
   "warning": "Warning",
   "amount": "Amount",
   "networkFee": "Network Fee",
   "address": "Address",
   "pending": "Pending",
+  "copy": "Copy",
+  "addressCopied": "Address copied to clipboard",
   "fieldEmptyError": "This field cannot be empty.",
   "welcomeTitle": "Welcome!",
   "welcomeDescription": "Skylight is one of the simplest Monero wallets. We will help you set up a wallet and connect to a server.",
@@ -138,7 +141,6 @@
   "addressBookContactName": "Contact Name",
   "addressBookUpdate": "Update",
   "addressBookSave": "Save",
-  "addressBookAddressCopied": "Address copied to clipboard",
   "sendSelectFromAddressBook": "Select from Address Book",
   "sendSelectedContact": "Selected contact",
   "sendClearSelectedContact": "Clear selected contact",
