--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -2,12 +2,15 @@
   "@@locale": "pt",
   "continueText": "Continuar",
   "cancel": "Cancelar",
+  "close": "Fechar",
   "unknownError": "Erro desconhecido.",
   "warning": "Atenção",
   "amount": "Valor",
   "networkFee": "Taxa da Rede",
   "address": "Endereço",
   "pending": "Pendente",
+  "copy": "Copiar",
+  "addressCopied": "Endereço copiado para a área de transferência",
   "fieldEmptyError": "Este campo não pode ficar vazio.",
   "welcomeTitle": "Bem-vindo!",
   "welcomeDescription": "A Skylight é uma das mais simples carteiras de Monero. Nós o ajudaremos a configurar uma carteira e se conectar à um servidor.",
@@ -138,7 +141,6 @@
   "addressBookContactName": "Nome do Contato",
   "addressBookUpdate": "Atualizar",
   "addressBookSave": "Salvar",
-  "addressBookAddressCopied": "Endereço copiado para a área de transferência",
   "sendSelectFromAddressBook": "Selecionar da Lista de Contatos",
   "sendSelectedContact": "Contato selecionado",
   "sendClearSelectedContact": "Limpar contato selecionado",
