Prompt for wallet password on desktop

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -51,6 +51,11 @@
   "unlockButton": "Unlock",
   "unlockReason": "Unlock wallet",
   "unlockUnableToAuthError": "Unable to authenticate.",
+  "unlockTitle": "Unlock Wallet",
+  "unlockDescription": "Enter your wallet password to unlock",
+  "unlockPasswordLabel": "Password",
+  "unlockPasswordHint": "Enter your password",
+  "unlockIncorrectPasswordError": "Incorrect password. Please try again.",
   "homeConnecting": "Connecting",
   "homeSyncing": "Syncing",
   "homeHeight": "Height",
@@ -80,7 +85,7 @@
   "settingsNotifyNewTxsLabel": "Notify New Transactions",
   "settingsAppLockLabel": "App Lock",
   "settingsAppLockUnlockReason": "Unlock wallet",
-  "settingsAppLockUnableToAuthError": "Unable to authenticate.",
+  "settingsAppLockUnableToAuthError": "Unable to authenticate. Make sure you have device unlock set up.",
   "settingsVerboseLoggingLabel": "Verbose Logging",
   "settingsVerboseLoggingDescription": "Logs wallet operations to a text file in the app's data folder for debugging purposes.",
   "settingsThemeLabel": "Theme",
