--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -51,6 +51,11 @@
   "unlockButton": "Desbloquear",
   "unlockReason": "Desbloquear carteira",
   "unlockUnableToAuthError": "Não foi possível autenticar.",
+  "unlockTitle": "Desbloquear Carteira",
+  "unlockDescription": "Digite a senha da sua carteira para desbloquear",
+  "unlockPasswordLabel": "Senha",
+  "unlockPasswordHint": "Digite sua senha",
+  "unlockIncorrectPasswordError": "Senha incorreta. Tente novamente.",
   "homeConnecting": "Conectando",
   "homeSyncing": "Sincronizando",
   "homeHeight": "Bloco",
@@ -80,7 +85,7 @@
   "settingsNotifyNewTxsLabel": "Notificar Novas Transações",
   "settingsAppLockLabel": "Desbloqueio com PIN/Biometria",
   "settingsAppLockUnlockReason": "Desbloquear carteira",
-  "settingsAppLockUnableToAuthError": "Não foi possível autenticar.",
+  "settingsAppLockUnableToAuthError": "Não foi possível autenticar. Verifique se o desbloqueio de tela está configurado.",
   "settingsVerboseLoggingLabel": "Logs Detalhados",
   "settingsVerboseLoggingDescription": "Registra operações da carteira em um arquivo de texto na pasta de dados do app para fins de depuração.",
   "settingsThemeLabel": "Tema",
@@ -118,7 +123,7 @@
   "secretKeysPublicViewKey": "Chave Pública de Visualização",
   "scanQrTitle": "Escanear QR Code",
   "confirmSendTitle": "Confirmar Envio",
-  "confirmSendDescription": "As transações são irreversíveis, então certifique-se de que estes detalhes correspondem exatamente.",
+  "confirmSendDescription": "As transações são irreversíveis, então verifique se estes detalhes correspondem exatamente.",
   "addressBookTitle": "Lista de Contatos",
   "addressBookAddContact": "Adicionar Contato",
   "addressBookEditContact": "Editar Contato",
