WIP: LWS string improvements

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -19,7 +19,7 @@
   "restoreWarningDescription": "Are you sure? The server that you connect to will be able to see your past and future Monero transaction history.",
   "restoreWarningContinueButton": "Continue",
   "connectionSetupTitle": "Connection Setup",
-  "connectionSetupDescription": "Let's setup a connection with LWS.",
+  "connectionSetupDescription": "Let's setup a connection with your Monero light-wallet server (LWS).",
   "connectionSetupAddressHint": "e.g. 192.168.1.1:18090 or example.com:18090",
   "connectionSetupProxyPortLabel": "HTTP Proxy Port (optional)",
   "connectionSetupProxyPortHint": "e.g. 4444 for I2P",
@@ -98,7 +98,7 @@
   "settingsLwsViewKeysButton": "View",
   "settingsSecretKeysLabel": "Secret Restore Keys",
   "settingsSecretKeysButton": "View",
-  "settingsViewLwsKeysDialogText": "Only share this information with your LWS server. These keys allow the holder to permanently see all transactions related to your wallets. Sharing these with an untrusted person will significantly harm your privacy.",
+  "settingsViewLwsKeysDialogText": "Only share this information with your light-wallet server. These keys allow the holder to permanently see all transactions related to your wallets. Sharing these with an untrusted person will significantly harm your privacy.",
   "settingsViewLwsKeysDialogRevealButton": "Reveal",
   "settingsViewSecretKeysDialogText": "Do not share these keys with anyone, including anyone claiming to be support. If you receive a request to provide these, you are being scammed. If you provide this information to another person, you will lose your money and it cannot be recovered.",
   "settingsViewSecretKeysDialogRevealButton": "Reveal",
