LWS string improvements for ptbr

--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -19,7 +19,7 @@
   "restoreWarningDescription": "Você tem certeza? O servidor ao qual você se conectar poderá ver seu histórico de transações Monero passadas e futuras.",
   "restoreWarningContinueButton": "Continuar",
   "connectionSetupTitle": "Configuração da Conexão",
-  "connectionSetupDescription": "Vamos configurar uma conexão com o LWS.",
+  "connectionSetupDescription": "Vamos configurar uma conexão com seu servidor light-wallet de Monero (LWS).",
   "connectionSetupAddressHint": "ex: 192.168.1.1:18090 ou exemplo.com:18090",
   "connectionSetupProxyPortLabel": "Porta do Proxy HTTP (opcional)",
   "connectionSetupProxyPortHint": "ex: 4444 para I2P",
@@ -98,7 +98,7 @@
   "settingsLwsViewKeysButton": "Ver",
   "settingsSecretKeysLabel": "Chaves Privadas de Restauração",
   "settingsSecretKeysButton": "Ver",
-  "settingsViewLwsKeysDialogText": "Somente compartilhe estas informações com o seu servidor LWS. Essas chaves permitem que o portador veja permanentemente todas as transações relacionadas às suas carteiras. Compartilhá-las com uma pessoa não confiável prejudicará significativamente sua privacidade.",
+  "settingsViewLwsKeysDialogText": "Somente compartilhe estas informações com o seu servidor light-wallet. Essas chaves permitem que o portador veja permanentemente todas as transações relacionadas às suas carteiras. Compartilhá-las com uma pessoa não confiável prejudicará significativamente sua privacidade.",
   "settingsViewLwsKeysDialogRevealButton": "Revelar",
   "settingsViewSecretKeysDialogText": "Não compartilhe essas chaves com ninguém, incluindo pessoas que aleguem ser suporte. Se você receber um pedido para fornecê-las, está sendo vítima de um golpe. Se você fornecer essas informações a outra pessoa, perderá seu dinheiro e ele não poderá ser recuperado.",
   "settingsViewSecretKeysDialogRevealButton": "Revelar",
