--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -27,7 +27,7 @@
   "connectionSetupUseSslLabel": "Use SSL",
   "connectionSetupTestConnectionButton": "Test Connection",
   "connectionSetupContinueButton": "Continue",
-    "createWalletTitle": "Create Wallet",
+  "createWalletTitle": "Create Wallet",
   "createWalletDescription": "Do you already have a Monero wallet seed, or do you need to make a new one?",
   "createWalletRestoreExistingButton": "Restore Existing",
   "createWalletCreateNewButton": "Create New",
@@ -73,7 +73,7 @@
   "receiveShowSubaddressButton": "Show Subaddress",
   "receiveShowPrimaryAddressButton": "Show Primary Address",
   "receiveServerNoSubaddressesWarn": "Warning: This server does not support subaddresses. For better privacy, consider using a server that supports them. You are receiving to your primary address.",
-  "receiveMaxSubaddressesReachedWarn": "You have reached the maximum number of subaddresses supported by this server. This is a used subaddress.",
+  "receiveMaxSubaddressesReachedWarn": "You have reached the maximum number of subaddresses supported by this server. This is a used address.",
   "sendTitle": "Send",
   "sendSendButton": "Send",
   "sendTransactionSuccessfullySent": "Transaction successfully sent!",
