--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -73,7 +73,7 @@
   "receiveShowSubaddressButton": "Mostrar Subendereço",
   "receiveShowPrimaryAddressButton": "Mostrar Endereço Primário",
   "receiveServerNoSubaddressesWarn": "Aviso: Este servidor não suporta subendereços. Para melhor privacidade, considere usar um servidor que os suporte. Você está recebendo no seu endereço primário.",
-  "receiveMaxSubaddressesReachedWarn": "Você atingiu o número máximo de subendereços suportados por este servidor. Este é um subendereço já usado.",
+  "receiveMaxSubaddressesReachedWarn": "Você atingiu o número máximo de subendereços suportados por este servidor. Este é um endereço já usado.",
   "sendTitle": "Enviar",
   "sendSendButton": "Enviar",
   "sendTransactionSuccessfullySent": "Transação enviada com sucesso!",
