--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -89,6 +89,10 @@
   "settingsAppLockUnableToAuthError": "Não foi possível autenticar. Verifique se o desbloqueio de tela está configurado.",
   "settingsVerboseLoggingLabel": "Logs Detalhados",
   "settingsVerboseLoggingDescription": "Registra operações da carteira em um arquivo de texto na pasta de dados do app para fins de depuração.",
+  "settingsVerboseLoggingDescriptionIos": "Registra operações da carteira e permite exportar os logs para um arquivo de texto.",
+  "settingsExportLogsLabel": "Exportar Logs",
+  "settingsExportLogsButton": "Exportar",
+  "settingsExportLogsError": "Nenhum log encontrado para exportar.",
   "settingsThemeLabel": "Tema",
   "settingsThemeSystem": "Sistema",
   "settingsThemeLight": "Claro",
