--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -89,6 +89,10 @@
   "settingsAppLockUnableToAuthError": "Unable to authenticate. Make sure you have device unlock set up.",
   "settingsVerboseLoggingLabel": "Verbose Logging",
   "settingsVerboseLoggingDescription": "Logs wallet operations to a text file in the app's data folder for debugging purposes.",
+  "settingsVerboseLoggingDescriptionIos": "Logs wallet operations and allows the logs to be exported to a text file.",
+  "settingsExportLogsLabel": "Export Logs",
+  "settingsExportLogsButton": "Export",
+  "settingsExportLogsError": "No logs found to export.",
   "settingsThemeLabel": "Theme",
   "settingsThemeSystem": "System",
   "settingsThemeLight": "Light",
