Remove debug code, minor ui changes and fix tor issues

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -175,6 +175,7 @@
   "torSettingsSocksPortLabel": "SOCKS Port",
   "torSettingsSocksPortHint": "e.g. 9050",
   "torSettingsUseOrbotLabel": "Use Orbot/InviZible",
+  "torSettingsUseOrbotLabelIos": "Use Orbot",
   "torSettingsSaveButton": "Save",
   "torSettingsTestConnectionButton": "Test Connection",
   "settingsConnectionSettingsLabel": "Connection Settings",
