Support scanning lws connection address qr code

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -189,5 +189,6 @@
       }
     }
   },
-  "connectionSetupTorDisabledError": "Tor is disabled. Please go back and enable it."
+  "connectionSetupTorDisabledError": "Tor is disabled. Please go back and enable it.",
+  "connectionSetupInvalidQrCode": "Invalid connection address."
 }
