--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -189,5 +189,6 @@
       }
     }
   },
-  "connectionSetupTorDisabledError": "O Tor está desativado. Por favor, volte e ative-o."
+  "connectionSetupTorDisabledError": "O Tor está desativado. Por favor, volte e ative-o.",
+  "connectionSetupInvalidQrCode": "Endereço de conexão inválido."
 }
