Remove fiat api icon and show an error icon next to fiat balance instead

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -68,6 +68,7 @@
   "homeIncomingTxSemanticLabel": "Incoming Transaction",
   "homeTransactionConfirmed": "Confirmed",
   "homeNoTransactions": "No transactions",
+  "homeFiatApiError": "Error connecting to fiat API",
   "receiveTitle": "Receive",
   "receivePrimaryAddressWarn": "Warning: Unless you know what you're doing, please consider using subaddresses for better privacy.",
   "receiveShareButton": "Share",
